force-app/main/default/objects/Creditsafe_Company_Report_Full__c/Creditsafe_Company_Report_Full__c.object-meta.xml
<CustomObject>
    <description>A detailed report about a company.</description>
    <label>Creditsafe Company Report</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Creditsafe Company Report Full Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Creditsafe Company Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>