force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Beneficiary_Owners_Country__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Owners_Country__c</fullName>
    <description>Owner country.</description>
    <label>Beneficiary Owners Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>