force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Beneficiary_Owners_Name__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Owners_Name__c</fullName>
    <description>Owner Name.</description>
    <label>Beneficiary Owners Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>