force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Beneficiary_Owners_Share_Percent__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Owners_Share_Percent__c</fullName>
    <description>The percentage of shares owned.</description>
    <label>Beneficiary Owners Share Percent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>