force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Business_Data__c.field-meta.xml
<CustomField>
    <fullName>Business_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Company details</description>
    <label>Business Data</label>
    <referenceTo>Business_Dossier__c</referenceTo>
    <relationshipLabel>Creditsafe Company Reports</relationshipLabel>
    <relationshipName>Creditsafe_Company_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>