force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Name__c</fullName>
    <description>The trading name of business.</description>
    <label>Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>