force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Business_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Business_Purpose__c</fullName>
    <description>A text description of the companies business purpose in German language.</description>
    <label>Business Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>