force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Commercial_Register_City__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Register_City__c</fullName>
    <description>The city in which the company is registered.</description>
    <label>Commercial Register City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>