force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Commercial_Register_Zip__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Register_Zip__c</fullName>
    <description>The postal code in which the company is registered.</description>
    <label>Commercial Register Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>