force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Company_Id__c.field-meta.xml
<CustomField>
    <fullName>Company_Id__c</fullName>
    <description>Company’s Id.</description>
    <externalId>true</externalId>
    <label>Company Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>