force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Complementary_Company__c.field-meta.xml
<CustomField>
    <fullName>Complementary_Company__c</fullName>
    <description>Details the complementary company.</description>
    <label>Complementary Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>