force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Contact_Information_Main_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Information_Main_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A CreditsafeAddressV2.</description>
    <label>Contact Information Main Address</label>
    <referenceTo>Dossier_Address__c</referenceTo>
    <relationshipLabel>Creditsafe Company Report Full</relationshipLabel>
    <relationshipName>Creditsafe_Company_Report_Full</relationshipName>
    <type>Lookup</type>
</CustomField>