force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Credit_Rating_Common_Description__c.field-meta.xml
<CustomField>
    <fullName>Credit_Rating_Common_Description__c</fullName>
    <description>Description of the credit score.</description>
    <label>Credit Rating Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>