force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Credit_Rating_Common_Value__c.field-meta.xml
<CustomField>
    <fullName>Credit_Rating_Common_Value__c</fullName>
    <description>Value of the credit score.</description>
    <label>Credit Rating Common Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>