force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Credit_Rating_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Rating_Limit__c</fullName>
    <description>Amount of advisable credit.</description>
    <label>Credit Rating Limit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>