force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Credit_Rating_Provider_Description__c.field-meta.xml
<CustomField>
    <fullName>Credit_Rating_Provider_Description__c</fullName>
    <description>Provider description.</description>
    <label>Credit Rating Provider Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>