force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Credit_Rating_Provider_Value_Max__c.field-meta.xml
<CustomField>
    <fullName>Credit_Rating_Provider_Value_Max__c</fullName>
    <description>Max value.</description>
    <label>Maximum Value Credit Rating Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>