force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Credit_Rating_Provider_Value_Min__c.field-meta.xml
<CustomField>
    <fullName>Credit_Rating_Provider_Value_Min__c</fullName>
    <description>Min value.</description>
    <label>Minimal Value Credit Rating Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>