force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Creditsafe_Company_Additional_Info_NL__c.field-meta.xml
<CustomField>
    <fullName>Creditsafe_Company_Additional_Info_NL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A CreditsafeCompanyAdditionalInformationNLAdditionalInformationV2.</description>
    <label>Creditsafe Company Additional Info NL</label>
    <referenceTo>Creditsafe_Company_Additional_Info_NL__c</referenceTo>
    <relationshipLabel>Creditsafe Company Report Full</relationshipLabel>
    <relationshipName>Creditsafe_Company_Report_Full</relationshipName>
    <type>Lookup</type>
</CustomField>