force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Creditsafe_Company_Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>Creditsafe_Company_Credit_Score__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A CreditsafeCompanyCreditScoreV2.</description>
    <label>Creditsafe Company Credit Score</label>
    <referenceTo>Creditsafe_Company_Credit_Score__c</referenceTo>
    <relationshipLabel>Creditsafe Company Report Full</relationshipLabel>
    <relationshipName>Creditsafe_Company_Report_Full</relationshipName>
    <type>Lookup</type>
</CustomField>