force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Creditsafe_Company_Negative_Info_DE__c.field-meta.xml
<CustomField>
    <fullName>Creditsafe_Company_Negative_Info_DE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A CreditsafeCompanyNegativeInformationDEV2.</description>
    <label>Creditsafe Company Negative Info DE</label>
    <referenceTo>Creditsafe_Company_Negative_Info_DE__c</referenceTo>
    <relationshipLabel>Creditsafe Company Report Full</relationshipLabel>
    <relationshipName>Creditsafe_Company_Report_Full</relationshipName>
    <type>Lookup</type>
</CustomField>