force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Current_CR_Provider_Value_Max__c.field-meta.xml
<CustomField>
    <fullName>Current_CR_Provider_Value_Max__c</fullName>
    <description>Max value.</description>
    <label>Maximum Current Provider Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>