force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Current_Rating_Max_Value__c.field-meta.xml
<CustomField>
    <fullName>Current_Rating_Max_Value__c</fullName>
    <description>Max value.</description>
    <label>Current Rating Maximum Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>