force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Date_Of_Cessation_Trading__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Cessation_Trading__c</fullName>
    <description>Date when the company has stopped trading.</description>
    <label>Date Of Cessation Trading</label>
    <type>Date</type>
</CustomField>