force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Date_Of_Insolvency__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Insolvency__c</fullName>
    <description>Date of insolvency application.</description>
    <label>Date Of Insolvency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>