force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Dateof_Starting_Operations__c.field-meta.xml
<CustomField>
    <fullName>Dateof_Starting_Operations__c</fullName>
    <description>The date the company began trading.</description>
    <label>Date of Starting Operations</label>
    <type>DateTime</type>
</CustomField>