force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Day_Sales_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Day_Sales_Outstanding__c</fullName>
    <description>The estimated number of days taken to pay the business.</description>
    <label>Day Sales Outstanding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>