force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Day_Sales_Outstanding_Lower__c.field-meta.xml
<CustomField>
    <fullName>Day_Sales_Outstanding_Lower__c</fullName>
    <description>The lower value for the company ranked 1/4 divided by industry code.</description>
    <label>Day Sales Outstanding Lower</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>