force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Day_Sales_Outstanding_Upper__c.field-meta.xml
<CustomField>
    <fullName>Day_Sales_Outstanding_Upper__c</fullName>
    <description>The higher value for the company ranked 3/4 divided by industry code.</description>
    <label>Day Sales Outstanding Upper</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>