force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/DE_Negative_Rating__c.field-meta.xml
<CustomField>
    <fullName>DE_Negative_Rating__c</fullName>
    <description>The negative credit rating if it exists for a company.</description>
    <label>DE Negative Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>