force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Exporter__c.field-meta.xml
<CustomField>
    <fullName>Exporter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if a company exports into foreign countries.</description>
    <label>Exporter</label>
    <type>Checkbox</type>
</CustomField>