force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Financials_Quality__c.field-meta.xml
<CustomField>
    <fullName>Financials_Quality__c</fullName>
    <description>The quality standard of the accounts data.</description>
    <label>Financials Quality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>