force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Has_Bankruptcy__c.field-meta.xml
<CustomField>
    <fullName>Has_Bankruptcy__c</fullName>
    <description>Indicates if there is bankruptcy information for the company.</description>
    <label>Has Bankruptcy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>