force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Image_Account_Financials_Type__c.field-meta.xml
<CustomField>
    <fullName>Image_Account_Financials_Type__c</fullName>
    <description>The financials type.  Is one of: 0 = Individual, 1 = Consolidated.</description>
    <label>Image Account Financials Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>