force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Image_Account_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Image_Account_Serial_Number__c</fullName>
    <description>The identification number of the image document.</description>
    <label>Image Account Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>