force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Image_Account_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Image_Account_Start_Date__c</fullName>
    <description>Financial statement date start.</description>
    <label>Image Account Start Date</label>
    <type>Date</type>
</CustomField>