force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Importer__c.field-meta.xml
<CustomField>
    <fullName>Importer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if a company imports from foreign countries.</description>
    <label>Importer</label>
    <type>Checkbox</type>
</CustomField>