force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Industry_Average_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Industry_Average_Credit_Limit__c</fullName>
    <description>The average credit limit for the company’s activity code.</description>
    <label>Industry Average Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>