force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Industry_Average_Credit_Rating__c.field-meta.xml
<CustomField>
    <fullName>Industry_Average_Credit_Rating__c</fullName>
    <description>The average credit rating for the company’s activity code.</description>
    <label>Industry Average Credit Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>