force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Industry_Average_Day_Sales_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Industry_Average_Day_Sales_Outstanding__c</fullName>
    <description>The number of days it takes this company to collect their debts.</description>
    <label>Industry Average Day Sales Outstanding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>