force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Industry_Average_Payment_Expectation_Day__c.field-meta.xml
<CustomField>
    <fullName>Industry_Average_Payment_Expectation_Day__c</fullName>
    <description>This is the guideline expectations, based upon our analysis, as to this company’s payment behaviour.</description>
    <label>Industry Average Payment Expectation Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>