force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Issued_Share_Capital__c.field-meta.xml
<CustomField>
    <fullName>Issued_Share_Capital__c</fullName>
    <description>This is the issued and paid share capital from shareholders.</description>
    <label>Issued Share Capital</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>