force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Latest_Shareholders_Equity_Figure__c.field-meta.xml
<CustomField>
    <fullName>Latest_Shareholders_Equity_Figure__c</fullName>
    <description>The total of Called up Share Capital, Revenue Reserves, Share Premium and Other Reserves.</description>
    <label>Latest Shareholders Equity Figure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>