force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Latest_Turnover_Figure__c.field-meta.xml
<CustomField>
    <fullName>Latest_Turnover_Figure__c</fullName>
    <description>Latest value for the previous year’s Net Sales.</description>
    <label>Latest Turnover Figure</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>