force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Legal_Form_Value__c.field-meta.xml
<CustomField>
    <fullName>Legal_Form_Value__c</fullName>
    <description>Value.</description>
    <label>Legal Form Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>