force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Main_Activity_Classification__c.field-meta.xml
<CustomField>
    <fullName>Main_Activity_Classification__c</fullName>
    <description>Activity classification.</description>
    <label>Main Activity Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>