force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Main_Activity_Code__c.field-meta.xml
<CustomField>
    <fullName>Main_Activity_Code__c</fullName>
    <description>Activity code of the company, and is used to identify the sector.</description>
    <label>Main Activity Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>