force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Main_Activity_Description__c.field-meta.xml
<CustomField>
    <fullName>Main_Activity_Description__c</fullName>
    <description>Activity description relating to the activity code.</description>
    <label>Main Activity Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>