force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Miscellaneous_Turnover_Range__c.field-meta.xml
<CustomField>
    <fullName>Miscellaneous_Turnover_Range__c</fullName>
    <description>A banding that gives an estimation of the company’s turnover.</description>
    <label>Miscellaneous Turnover Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>