force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/NL_Negative_Rating__c.field-meta.xml
<CustomField>
    <fullName>NL_Negative_Rating__c</fullName>
    <description>The negative credit rating if it exists for a NL company.</description>
    <label>NL Negative Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>