force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Nominal_Share_Capital__c.field-meta.xml
<CustomField>
    <fullName>Nominal_Share_Capital__c</fullName>
    <description>The maximum amount of share capital the company is authorised by its constitutional documents to issue to shareholders.</description>
    <label>Nominal Share Capital</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>