force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <description>Number reserved for future use with the Creditsafe Global number.</description>
    <label>Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>