force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <description>Unique Creditsafe identifier for this specific order request.</description>
    <label>Order Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>