force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Payment_Expectation_Days__c.field-meta.xml
<CustomField>
    <fullName>Payment_Expectation_Days__c</fullName>
    <description>The estimated number of days until payment from the business.</description>
    <label>Payment Expectation Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>