force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Payment_Expectation_Days_Median__c.field-meta.xml
<CustomField>
    <fullName>Payment_Expectation_Days_Median__c</fullName>
    <description>The middle value of the estimated number of days taken to pay the business.</description>
    <label>Payment Expectation Days Median</label>
    <length>255</length>
    <type>Text</type>
</CustomField>