force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Payment_Expectation_Days_Upper__c.field-meta.xml
<CustomField>
    <fullName>Payment_Expectation_Days_Upper__c</fullName>
    <description>The higher value for the company ranked 3/4 divided by industry code.</description>
    <label>Payment Expectation Days Upper</label>
    <length>255</length>
    <type>Text</type>
</CustomField>