force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Previous_CR_Common_Value__c.field-meta.xml
<CustomField>
    <fullName>Previous_CR_Common_Value__c</fullName>
    <description>Value of the credit score.</description>
    <label>Previous CR Common Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>