force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Previous_CR_Limit__c.field-meta.xml
<CustomField>
    <fullName>Previous_CR_Limit__c</fullName>
    <description>Amount of advisable credit.</description>
    <label>Previous CR Limit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>