force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Previous_CR_Provider_Description__c.field-meta.xml
<CustomField>
    <fullName>Previous_CR_Provider_Description__c</fullName>
    <description>Provider description.</description>
    <label>Previous Provider Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>