force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Previous_CR_Provider_Value_Min__c.field-meta.xml
<CustomField>
    <fullName>Previous_CR_Provider_Value_Min__c</fullName>
    <description>Min value.</description>
    <label>Previous Provider Minimal Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>