force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Principal_Activity_Code__c.field-meta.xml
<CustomField>
    <fullName>Principal_Activity_Code__c</fullName>
    <description>Code</description>
    <label>Principal Activity Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>