force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Principal_Activity_Value__c.field-meta.xml
<CustomField>
    <fullName>Principal_Activity_Value__c</fullName>
    <description>Value.</description>
    <label>Principal Activity Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>