force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Rsin_Number__c.field-meta.xml
<CustomField>
    <fullName>Rsin_Number__c</fullName>
    <description>The Legal Entities and Partnerships Information Number.</description>
    <label>Rsin Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>