force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Suspension_Of_Payments_Mora__c.field-meta.xml
<CustomField>
    <fullName>Suspension_Of_Payments_Mora__c</fullName>
    <description>Indicates if the company has a suspensions of payments.</description>
    <label>Suspension Of Payments Mora</label>
    <length>255</length>
    <type>Text</type>
</CustomField>