force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Trustee_Code__c.field-meta.xml
<CustomField>
    <fullName>Trustee_Code__c</fullName>
    <description>Name and ZIP code of trustee.</description>
    <label>Trustee Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>