force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Trustee_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Trustee_Email_Address__c</fullName>
    <description>Email address of the trustee.</description>
    <label>Trustee Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>