force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Trustee_Fax_Number__c.field-meta.xml
<CustomField>
    <fullName>Trustee_Fax_Number__c</fullName>
    <description>Fax number trustee.</description>
    <label>Trustee Fax Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>