force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Trustee_Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>Trustee_Telephone_Number__c</fullName>
    <description>Phone number trustee.</description>
    <label>Trustee Telephone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>