force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Trustee_Title__c.field-meta.xml
<CustomField>
    <fullName>Trustee_Title__c</fullName>
    <description>Title trustee.</description>
    <label>Trustee Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>