force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Turnover_Range_Year__c.field-meta.xml
<CustomField>
    <fullName>Turnover_Range_Year__c</fullName>
    <description>Turnover year.</description>
    <label>Turnover Range Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>