force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/Turnover_Ranges__c.field-meta.xml
<CustomField>
    <fullName>Turnover_Ranges__c</fullName>
    <description>Turnover range.</description>
    <label>Turnover Ranges</label>
    <length>255</length>
    <type>Text</type>
</CustomField>