force-app/main/default/objects/Creditsafe_Company_Report_Full__c/fields/VAT_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>VAT_Registration_Number__c</fullName>
    <description>Local VAT Number.</description>
    <externalId>true</externalId>
    <label>VAT Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>